src/parser/tests/parse_errors/snapshots/rusty__parser__tests__parse_errors__parse_error_messages_test__if_then_with_unexpected_token.snap
---
source: src/parser/tests/parse_errors/parse_error_messages_test.rs
expression: diagnostics
---
error: Unexpected token: expected KeywordThen but found CHARLIE
  ┌─ <internal>:3:17
  │
3 │         IF TRUE CHARLIE
  │                 ^^^^^^^ Unexpected token: expected KeywordThen but found CHARLIE

error: Unexpected token: expected KeywordSemicolon but found 'x'
  ┌─ <internal>:4:13
  │
4 │             x;
  │             ^ Unexpected token: expected KeywordSemicolon but found 'x'

error: Unexpected token: expected Literal but found ELSE
  ┌─ <internal>:5:9
  │
5 │         ELSE
  │         ^^^^ Unexpected token: expected Literal but found ELSE

error: Unexpected token: expected KeywordSemicolon but found 'ELSE
            y'
  ┌─ <internal>:5:9
  │  
5 │ ╭         ELSE
6 │ │             y;
  │ ╰─────────────^ Unexpected token: expected KeywordSemicolon but found 'ELSE
            y'

error: Unexpected token: expected Literal but found END_IF
  ┌─ <internal>:7:9
  │
7 │         END_IF
  │         ^^^^^^ Unexpected token: expected Literal but found END_IF

error: Unexpected token: expected KeywordSemicolon but found 'END_IF'
  ┌─ <internal>:7:9
  │
7 │         END_IF
  │         ^^^^^^ Unexpected token: expected KeywordSemicolon but found 'END_IF'

error: Missing expected Token [KeywordSemicolon, KeywordColon]
  ┌─ <internal>:8:9
  │
8 │         END_PROGRAM
  │         ^^^^^^^^^^^ Missing expected Token [KeywordSemicolon, KeywordColon]

error: Unexpected token: expected KeywordSemicolon but found 'END_PROGRAM'
  ┌─ <internal>:8:9
  │
8 │         END_PROGRAM
  │         ^^^^^^^^^^^ Unexpected token: expected KeywordSemicolon but found 'END_PROGRAM'

error: Could not resolve reference to CHARLIE
  ┌─ <internal>:3:17
  │
3 │         IF TRUE CHARLIE
  │                 ^^^^^^^ Could not resolve reference to CHARLIE


